Fix for canvas corner sticking out

--- a/style.css
+++ b/style.css
@@ -37,3 +37,7 @@ canvas {
 
 	float: right;
 }
+
+canvas {
+  	border-radius:5px;	
+}
